CSCE322/hw1_ANTLR/starter/.antlr/csce322a01part02Parser.java
// Generated from c:\Users\Nasi\Desktop\FALL2019\CSCE322\homeworks\hw1\starter\csce322a01part02.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class csce322a01part02Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SECTIONBEGIN=1, SECTIONEND=2, SECTIONTITLE=3, ASSIGNVALUE=4, UP=5, DOWN=6, 
		LEFT=7, RIGHT=8, MAZE1=9, MAZE2=10, MAZE3=11, MAZE4=12, UNDERSCORE=13, 
		ROWEND=14, MAZEBEGIN=15, MAZEEND=16, LISTBEGIN=17, LISTEND=18, WS=19;
	public static final int
		RULE_mazeGame = 0, RULE_moves = 1, RULE_moveSymbol = 2, RULE_moveChar = 3, 
		RULE_moveUP = 4, RULE_moveDOWN = 5, RULE_moveLEFT = 6, RULE_moveRIGHT = 7, 
		RULE_maze = 8, RULE_firstRow = 9, RULE_lastRow = 10, RULE_column = 11, 
		RULE_row = 12, RULE_maze1 = 13, RULE_maze2 = 14, RULE_maze3 = 15, RULE_maze4 = 16, 
		RULE_mazeChar = 17, RULE_sectionTitle = 18, RULE_sectionBegin = 19, RULE_sectionEnd = 20, 
		RULE_listBegin = 21, RULE_listEnd = 22, RULE_mazeBegin = 23, RULE_mazeEnd = 24, 
		RULE_endRow = 25, RULE_assignval = 26, RULE_semanticRules = 27;
	public static final String[] ruleNames = {
		"mazeGame", "moves", "moveSymbol", "moveChar", "moveUP", "moveDOWN", "moveLEFT", 
		"moveRIGHT", "maze", "firstRow", "lastRow", "column", "row", "maze1", 
		"maze2", "maze3", "maze4", "mazeChar", "sectionTitle", "sectionBegin", 
		"sectionEnd", "listBegin", "listEnd", "mazeBegin", "mazeEnd", "endRow", 
		"assignval", "semanticRules"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", null, "'@'", "'u'", "'d'", "'l'", "'r'", "'x'", "'-'", 
		"'g'", null, "'_'", "'$'", "'('", "')'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SECTIONBEGIN", "SECTIONEND", "SECTIONTITLE", "ASSIGNVALUE", "UP", 
		"DOWN", "LEFT", "RIGHT", "MAZE1", "MAZE2", "MAZE3", "MAZE4", "UNDERSCORE", 
		"ROWEND", "MAZEBEGIN", "MAZEEND", "LISTBEGIN", "LISTEND", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "csce322a01part02.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	int players = 0;
	int countG = 0;
	int xSymbols = 0;
	int allSymbols = 0;
	boolean up = false;
	boolean down = false;
	boolean left = false;
	boolean right = false;
	boolean isValid = true;

	public csce322a01part02Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MazeGameContext extends ParserRuleContext {
		public MazeContext maze() {
			return getRuleContext(MazeContext.class,0);
		}
		public MovesContext moves() {
			return getRuleContext(MovesContext.class,0);
		}
		public SemanticRulesContext semanticRules() {
			return getRuleContext(SemanticRulesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(csce322a01part02Parser.EOF, 0); }
		public MazeGameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeGame; }
	}

	public final MazeGameContext mazeGame() throws RecognitionException {
		MazeGameContext _localctx = new MazeGameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mazeGame);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(56);
				maze();
				setState(57);
				moves();
				setState(58);
				semanticRules();
				setState(59);
				match(EOF);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(61);
				moves();
				setState(62);
				maze();
				setState(63);
				semanticRules();
				setState(64);
				match(EOF);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MovesContext extends ParserRuleContext {
		public SectionBeginContext sectionBegin() {
			return getRuleContext(SectionBeginContext.class,0);
		}
		public SectionTitleContext sectionTitle() {
			return getRuleContext(SectionTitleContext.class,0);
		}
		public AssignvalContext assignval() {
			return getRuleContext(AssignvalContext.class,0);
		}
		public ListBeginContext listBegin() {
			return getRuleContext(ListBeginContext.class,0);
		}
		public MoveSymbolContext moveSymbol() {
			return getRuleContext(MoveSymbolContext.class,0);
		}
		public ListEndContext listEnd() {
			return getRuleContext(ListEndContext.class,0);
		}
		public SectionEndContext sectionEnd() {
			return getRuleContext(SectionEndContext.class,0);
		}
		public MovesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moves; }
	}

	public final MovesContext moves() throws RecognitionException {
		MovesContext _localctx = new MovesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moves);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			sectionBegin();
			setState(69);
			sectionTitle();
			setState(70);
			assignval();
			setState(71);
			listBegin();
			setState(72);
			moveSymbol();
			setState(73);
			listEnd();
			setState(74);
			sectionEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveSymbolContext extends ParserRuleContext {
		public List<MoveCharContext> moveChar() {
			return getRuleContexts(MoveCharContext.class);
		}
		public MoveCharContext moveChar(int i) {
			return getRuleContext(MoveCharContext.class,i);
		}
		public List<TerminalNode> UNDERSCORE() { return getTokens(csce322a01part02Parser.UNDERSCORE); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(csce322a01part02Parser.UNDERSCORE, i);
		}
		public MoveSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveSymbol; }
	}

	public final MoveSymbolContext moveSymbol() throws RecognitionException {
		MoveSymbolContext _localctx = new MoveSymbolContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moveSymbol);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			moveChar();
			setState(77);
			match(UNDERSCORE);
			setState(78);
			moveChar();
			setState(79);
			match(UNDERSCORE);
			setState(80);
			moveChar();
			setState(81);
			match(UNDERSCORE);
			setState(82);
			moveChar();
			setState(83);
			match(UNDERSCORE);
			setState(88); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(84);
					moveChar();
					setState(85);
					match(UNDERSCORE);
					}
					break;
				case 2:
					{
					setState(87);
					moveChar();
					}
					break;
				}
				}
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << UP) | (1L << DOWN) | (1L << LEFT) | (1L << RIGHT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveCharContext extends ParserRuleContext {
		public MoveUPContext moveUP() {
			return getRuleContext(MoveUPContext.class,0);
		}
		public MoveDOWNContext moveDOWN() {
			return getRuleContext(MoveDOWNContext.class,0);
		}
		public MoveLEFTContext moveLEFT() {
			return getRuleContext(MoveLEFTContext.class,0);
		}
		public MoveRIGHTContext moveRIGHT() {
			return getRuleContext(MoveRIGHTContext.class,0);
		}
		public MoveCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveChar; }
	}

	public final MoveCharContext moveChar() throws RecognitionException {
		MoveCharContext _localctx = new MoveCharContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moveChar);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UP:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				moveUP();
				}
				break;
			case DOWN:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				moveDOWN();
				}
				break;
			case LEFT:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				moveLEFT();
				}
				break;
			case RIGHT:
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				moveRIGHT();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveUPContext extends ParserRuleContext {
		public TerminalNode UP() { return getToken(csce322a01part02Parser.UP, 0); }
		public MoveUPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveUP; }
	}

	public final MoveUPContext moveUP() throws RecognitionException {
		MoveUPContext _localctx = new MoveUPContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moveUP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(UP);
			up = true;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveDOWNContext extends ParserRuleContext {
		public TerminalNode DOWN() { return getToken(csce322a01part02Parser.DOWN, 0); }
		public MoveDOWNContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveDOWN; }
	}

	public final MoveDOWNContext moveDOWN() throws RecognitionException {
		MoveDOWNContext _localctx = new MoveDOWNContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_moveDOWN);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(DOWN);
			down = true;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveLEFTContext extends ParserRuleContext {
		public TerminalNode LEFT() { return getToken(csce322a01part02Parser.LEFT, 0); }
		public MoveLEFTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveLEFT; }
	}

	public final MoveLEFTContext moveLEFT() throws RecognitionException {
		MoveLEFTContext _localctx = new MoveLEFTContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_moveLEFT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LEFT);
			left = true;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveRIGHTContext extends ParserRuleContext {
		public TerminalNode RIGHT() { return getToken(csce322a01part02Parser.RIGHT, 0); }
		public MoveRIGHTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveRIGHT; }
	}

	public final MoveRIGHTContext moveRIGHT() throws RecognitionException {
		MoveRIGHTContext _localctx = new MoveRIGHTContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_moveRIGHT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(RIGHT);
			right = true;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeContext extends ParserRuleContext {
		public SectionBeginContext sectionBegin() {
			return getRuleContext(SectionBeginContext.class,0);
		}
		public SectionTitleContext sectionTitle() {
			return getRuleContext(SectionTitleContext.class,0);
		}
		public AssignvalContext assignval() {
			return getRuleContext(AssignvalContext.class,0);
		}
		public MazeBeginContext mazeBegin() {
			return getRuleContext(MazeBeginContext.class,0);
		}
		public FirstRowContext firstRow() {
			return getRuleContext(FirstRowContext.class,0);
		}
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public LastRowContext lastRow() {
			return getRuleContext(LastRowContext.class,0);
		}
		public MazeEndContext mazeEnd() {
			return getRuleContext(MazeEndContext.class,0);
		}
		public SectionEndContext sectionEnd() {
			return getRuleContext(SectionEndContext.class,0);
		}
		public MazeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maze; }
	}

	public final MazeContext maze() throws RecognitionException {
		MazeContext _localctx = new MazeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_maze);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			sectionBegin();
			setState(111);
			sectionTitle();
			setState(112);
			assignval();
			setState(113);
			mazeBegin();
			setState(114);
			firstRow();
			setState(115);
			column();
			setState(116);
			lastRow();
			setState(117);
			mazeEnd();
			setState(118);
			sectionEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FirstRowContext extends ParserRuleContext {
		public List<Maze1Context> maze1() {
			return getRuleContexts(Maze1Context.class);
		}
		public Maze1Context maze1(int i) {
			return getRuleContext(Maze1Context.class,i);
		}
		public EndRowContext endRow() {
			return getRuleContext(EndRowContext.class,0);
		}
		public FirstRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firstRow; }
	}

	public final FirstRowContext firstRow() throws RecognitionException {
		FirstRowContext _localctx = new FirstRowContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_firstRow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			maze1();
			setState(121);
			maze1();
			setState(122);
			maze1();
			setState(123);
			maze1();
			setState(124);
			maze1();
			setState(125);
			maze1();
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				maze1();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MAZE1 );
			setState(131);
			endRow();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LastRowContext extends ParserRuleContext {
		public List<Maze1Context> maze1() {
			return getRuleContexts(Maze1Context.class);
		}
		public Maze1Context maze1(int i) {
			return getRuleContext(Maze1Context.class,i);
		}
		public LastRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lastRow; }
	}

	public final LastRowContext lastRow() throws RecognitionException {
		LastRowContext _localctx = new LastRowContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_lastRow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			maze1();
			setState(134);
			maze1();
			setState(135);
			maze1();
			setState(136);
			maze1();
			setState(137);
			maze1();
			setState(138);
			maze1();
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				maze1();
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MAZE1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public List<RowContext> row() {
			return getRuleContexts(RowContext.class);
		}
		public RowContext row(int i) {
			return getRuleContext(RowContext.class,i);
		}
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_column);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			row();
			setState(145);
			row();
			setState(146);
			row();
			setState(147);
			row();
			setState(149); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(148);
					row();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(151); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowContext extends ParserRuleContext {
		public List<Maze1Context> maze1() {
			return getRuleContexts(Maze1Context.class);
		}
		public Maze1Context maze1(int i) {
			return getRuleContext(Maze1Context.class,i);
		}
		public List<MazeCharContext> mazeChar() {
			return getRuleContexts(MazeCharContext.class);
		}
		public MazeCharContext mazeChar(int i) {
			return getRuleContext(MazeCharContext.class,i);
		}
		public EndRowContext endRow() {
			return getRuleContext(EndRowContext.class,0);
		}
		public RowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_row; }
	}

	public final RowContext row() throws RecognitionException {
		RowContext _localctx = new RowContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_row);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			maze1();
			setState(154);
			mazeChar();
			setState(155);
			mazeChar();
			setState(156);
			mazeChar();
			setState(158); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(157);
					mazeChar();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(160); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(162);
			maze1();
			setState(163);
			endRow();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Maze1Context extends ParserRuleContext {
		public TerminalNode MAZE1() { return getToken(csce322a01part02Parser.MAZE1, 0); }
		public Maze1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maze1; }
	}

	public final Maze1Context maze1() throws RecognitionException {
		Maze1Context _localctx = new Maze1Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_maze1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(MAZE1);
			xSymbols++;allSymbols++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Maze2Context extends ParserRuleContext {
		public TerminalNode MAZE2() { return getToken(csce322a01part02Parser.MAZE2, 0); }
		public Maze2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maze2; }
	}

	public final Maze2Context maze2() throws RecognitionException {
		Maze2Context _localctx = new Maze2Context(_ctx, getState());
		enterRule(_localctx, 28, RULE_maze2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(MAZE2);
			allSymbols++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Maze3Context extends ParserRuleContext {
		public TerminalNode MAZE3() { return getToken(csce322a01part02Parser.MAZE3, 0); }
		public Maze3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maze3; }
	}

	public final Maze3Context maze3() throws RecognitionException {
		Maze3Context _localctx = new Maze3Context(_ctx, getState());
		enterRule(_localctx, 30, RULE_maze3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(MAZE3);
			countG++;allSymbols++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Maze4Context extends ParserRuleContext {
		public TerminalNode MAZE4() { return getToken(csce322a01part02Parser.MAZE4, 0); }
		public Maze4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maze4; }
	}

	public final Maze4Context maze4() throws RecognitionException {
		Maze4Context _localctx = new Maze4Context(_ctx, getState());
		enterRule(_localctx, 32, RULE_maze4);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(MAZE4);
			allSymbols++;players++;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeCharContext extends ParserRuleContext {
		public Maze1Context maze1() {
			return getRuleContext(Maze1Context.class,0);
		}
		public Maze2Context maze2() {
			return getRuleContext(Maze2Context.class,0);
		}
		public Maze3Context maze3() {
			return getRuleContext(Maze3Context.class,0);
		}
		public Maze4Context maze4() {
			return getRuleContext(Maze4Context.class,0);
		}
		public MazeCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeChar; }
	}

	public final MazeCharContext mazeChar() throws RecognitionException {
		MazeCharContext _localctx = new MazeCharContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_mazeChar);
		try {
			setState(181);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAZE1:
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				maze1();
				}
				break;
			case MAZE2:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				maze2();
				}
				break;
			case MAZE3:
				enterOuterAlt(_localctx, 3);
				{
				setState(179);
				maze3();
				}
				break;
			case MAZE4:
				enterOuterAlt(_localctx, 4);
				{
				setState(180);
				maze4();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionTitleContext extends ParserRuleContext {
		public TerminalNode SECTIONTITLE() { return getToken(csce322a01part02Parser.SECTIONTITLE, 0); }
		public SectionTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionTitle; }
	}

	public final SectionTitleContext sectionTitle() throws RecognitionException {
		SectionTitleContext _localctx = new SectionTitleContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_sectionTitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(SECTIONTITLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionBeginContext extends ParserRuleContext {
		public TerminalNode SECTIONBEGIN() { return getToken(csce322a01part02Parser.SECTIONBEGIN, 0); }
		public SectionBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionBegin; }
	}

	public final SectionBeginContext sectionBegin() throws RecognitionException {
		SectionBeginContext _localctx = new SectionBeginContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_sectionBegin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(SECTIONBEGIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionEndContext extends ParserRuleContext {
		public TerminalNode SECTIONEND() { return getToken(csce322a01part02Parser.SECTIONEND, 0); }
		public SectionEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionEnd; }
	}

	public final SectionEndContext sectionEnd() throws RecognitionException {
		SectionEndContext _localctx = new SectionEndContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_sectionEnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(SECTIONEND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListBeginContext extends ParserRuleContext {
		public TerminalNode LISTBEGIN() { return getToken(csce322a01part02Parser.LISTBEGIN, 0); }
		public ListBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listBegin; }
	}
